solve the alignment issue of icon in contact us page

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -507,6 +507,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 #social-media-logos-section .social-media-logos-img {
   padding: 0px 50px;
+  padding-left: 44%;
 }
 
 /*--
